# nepseman-api

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_client.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/versions/: 001_create_market_tables.py
app/: main.py
app/api/routes/: indices.py  market.py  meta.py  prices.py  securities.py
app/core/: auth.py  config.py  endpoints.py  session.py  symbols.py
app/db/: repository.py
app/models/: responses.py
app/services/: nepse.py
nepseman_api/: README.md  client.py  exceptions.py  session.py
nginx/: nginx.conf
npm/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
npm/src/: auth.ts  client.ts  index.ts  nepse.wasm  session.ts  types.ts
scripts/: test_all.py
server/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
server/alembic/: env.py
server/alembic/versions/: 002_add_snapshot_unique_constraint.py
server/app/: main.py
server/app/api/routes/: indices.py  market.py  ws.py
server/app/core/: cache.py  config.py  session.py  symbols.py
server/app/db/: database.py  models.py  repository.py
server/app/models/: responses.py
server/app/services/: nepse.py
server/nepseman_api/: __init__.py  auth.py
server/tests/: test_auth.py
tests/: test_api.py  test_auth.py
