[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nepse-scrapper"
version = "2.0.0"
description = "Self-contained NEPSE data API — independent WASM auth, async, cached, WebSocket"
dependencies = [
    "httpx>=0.27.2",
    "wasmtime==45.0.0",
    "certifi>=2024.8.30",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "slowapi>=0.1.9",
]

[tool.setuptools.package-data]
"*" = ["*.wasm"]
