[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nepseman-api"
version = "1.0.0"
description = "Unofficial reverse-engineered REST + WebSocket API for Nepal Stock Exchange (NEPSE)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "wasmtime==45.0.0",
    "certifi>=2024.8.30",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "slowapi>=0.1.9",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
]

[project.scripts]
nepseman-api = "app.main:main"         

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]                       

[tool.setuptools.package-data]
"*" = ["*.wasm"]